# LustrePerfMon

./: .pylintrc  CODE_OF_CONDUCT.md  Makefile  Makefile.am  README  README.md  autogen.sh  build.sh  check_xml.c  collectd.conf.all  collectd.conf.ddnmon  collectd.conf.esmon  collectd.conf.template  configure.ac  detect-distro.sh  esmon.conf  esmon.spec.in  esmon_build  esmon_build.conf  esmon_config  esmon_influxdb  esmon_install  esmon_install.conf  esmon_ioload  esmon_test  esmon_test.conf  esmon_virt  esmon_virt.conf  general_xml.m4  gpfs_xml-3.5.m4  grafana-ddnmon.json  grafana_dashboard.json  influxdb.conf.diff  installesmon.sh  lustre_xml-1.8.9.m4  lustre_xml-2.1.6.m4  lustre_xml-2.4.2.m4  lustre_xml-2.5.m4  lustre_xml-ieel-2.5.m4  lustre_xml.m4  (+4 more)
.github/workflows/: esmon_build.yml  main.yml
collectd/: Makefile.am  build.sh
config_examples/es2/: esmon_test.conf  esmon_virt.conf
config_examples/es3/: esmon_test.conf  esmon_virt.conf
config_examples/es3/ldiskfs/: esmon_test.conf
config_examples/es3/zfs/: esmon_test.conf
config_examples/es4/: esmon_test.conf  esmon_virt.conf
config_examples/es4/ldiskfs/: esmon_test.conf
config_examples/es4/zfs/: esmon_test.conf
dashboards/: SFA_physical_disk.json  SFA_physical_disk.json.template  SFA_virtual_disk.json  SFA_virtual_disk.json.template  cluster_status.json  lustre_client.json  lustre_mds.json  lustre_mdt.json  lustre_oss.json  lustre_ost.json  lustre_statistics.json  lustre_user.json  server_statistics.json
dependency/: Makefile.am
doc/: ESMON Quick Start Guide_0.0.1.docx  ESMON Quick Start Guide_0.0.2.docx  ESMON_User_Manual_Raw_cn.md  ESMON_User_Manual_Raw_en.md  ESMON_User_Manual_cn_0.0.2.docx  ESMON_User_Manual_cn_0.0.3.docx  ESMON_User_Manual_cn_0.0.4.docx  ESMON_User_Manual_cn_0.0.5.docx  ESMON_User_Manual_en_0.0.2.docx  ESMON_User_Manual_en_0.0.3.docx  ESMON_User_Manual_en_0.0.4.docx  LustrePerfMon_User_Manual_Raw_cn.md  LustrePerfMon_User_Manual_Raw_en.md  LustrePerfMon_User_Manual_cn_0.0.10.docx  LustrePerfMon_User_Manual_cn_0.0.9.docx  LustrePerfMon_User_Manual_en_0.0.9.docx  manual.md
doc/outdated/: ESMON_User_Manual_Raw_cn.md  ddntemplate.latex
doc/pic/server_statistics/: desktop.ini
example_configs/es2/: esmon_test.conf
example_configs/es3/ldiskfs/: esmon_test.conf
example_configs/es3/zfs/: esmon_test.conf
example_configs/es4/ldiskfs/: esmon_test.conf  esmon_virt.conf
example_configs/es4/zfs/: esmon_test.conf
example_configs/local/: esmon_install.conf  esmon_test.conf  esmon_virt.conf
grafana/: Makefile.am  build.sh  grafana.spec
influxdb/: influxdb.spec  influxdb_1.8.patch
man1/: esmon_install.1
montools/: Makefile.am  build.sh  grafana-setup.py  graphite-setup.py  montools.spec
opentsdb_web/: Makefile.am  bar.html  bubble.html  index.html  jobid.js  opentsdb.js  opentsdb_web.spec  pie.html  table.html  topn.js
package/: Makefile.am  influxdb.conf.ddnmon  install.py  install.sh  monsystem-ddn.repo  topn.py
pyesmon/: .pylintrc  __init__.py  collectd.py  daemon.py  esmon_build.py  esmon_common.py  esmon_config.py  esmon_influxdb.py  esmon_install.py  esmon_install_common.py  esmon_install_nodeps.py  esmon_ioload.py  esmon_test.py  esmon_virt.py  grafana.py  lustre.py  ssh_host.py  time_util.py  utils.py  watched_io.py
tests/lustre-2.5.xml/md_tests/1/: testcase.xml
xml_definition/: Makefile.am  build.sh  collectd.conf.all  general.m4  gpfs-3.5.m4  ime-0.1.m4  ime-1.1.m4  ime-1.2.m4  ime-monitor--frgbs_1.1.txt  ime-monitor--frgbs_1.2.txt  ime-monitor--nvm-stat--bfs_1.2.txt  ime_monitor_bad_node_filter  infiniband-0.1.m4  lustre-1.8.9.m4  lustre-2.1.6.m4  lustre-2.12.m4  lustre-2.13.m4  lustre-2.4.2.m4  lustre-2.5.m4  lustre-b_es5_1.m4  lustre-b_es5_2.m4  lustre-b_es6_0.m4  lustre-b_es6_3.m4  lustre-es4-2.10.m4  lustre-ieel-2.5.m4  lustre-ieel-2.7.m4  lustre.m4  sfa-0.1.m4  sfa-11-general.m4  sfa-11.0.m4  sfa-11.6.m4  sfa-2.2.m4  sfa-3.0.m4  sfa.m4  test_driver.py  xml_definition.spec
xml_definition/tests/lustre-2.5/: preset.xml  tests.xml
xml_definition/tests/lustre-2.5.xml/md_tests/1/: md_stats.data
xml_definition/tests/lustre-2.5.xml/osd_tests/1/: mdt_acctuser.data  testcase.xml
xml_definition/tests/lustre-2.5.xml/osd_tests/2/: testcase.xml
xml_definition/tests/lustre-ieel-2.7/: preset.xml  tests.xml
xml_definition/tests/lustre-ieel-2.7/proc/fs/lustre/mdt/lustre-MDT0000/: job_stats
xml_definition/tests/lustre-ieel-2.7/proc/fs/lustre/obdfilter/scratch-OST0012/: job_stats
xml_definition/tests/sfa-3.0/: preset.xml  tests.xml
xml_definition/tests/sfa-3.0/content/: show pd c all  show vd c all
